force-app/main/default/objects/PIRL_Template_Element__c/PIRL_Template_Element__c.object-meta.xml
<CustomObject>
    <label>PIRL Template Element</label>
    <nameField>
        <label>PIRL Template Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PIRL Template Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>