force-app/main/default/objects/PIRL_Template_Element__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>PTE-{00000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>