force-app/main/default/objects/PIRL_Template_Element__c/fields/PIRL_Element__c.field-meta.xml
<CustomField>
    <fullName>PIRL_Element__c</fullName>
    <label>PIRL Element</label>
    <referenceTo>PIRL_Element__c</referenceTo>
    <relationshipLabel>PIRL Template Elements</relationshipLabel>
    <relationshipName>PIRL_Template_Elements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>