force-app/main/default/objects/PIRL_Template_Element__c/fields/PIRL_Template__c.field-meta.xml
<CustomField>
    <fullName>PIRL_Template__c</fullName>
    <label>PIRL Template</label>
    <referenceTo>PIRL_Template__c</referenceTo>
    <relationshipLabel>PIRL Template Elements</relationshipLabel>
    <relationshipName>PIRL_Template_Elements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>